# machine-profile-mcp

./: .flake8  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DIAGNOSTICS.md  MCP-CONCEPTS.md  TESTING.md  V1_1_PEER_QUICKSTART.md  V1_1_PEER_VALIDATION.md
scripts/: peer_validate.py
windows_diagnostics_mcp/: __init__.py  server.py
windows_diagnostics_mcp/models/: __init__.py  ai.py  developer.py  health.py  metadata.py  network.py  process.py  storage.py  system.py  workload.py
windows_diagnostics_mcp/prompts/: __init__.py  analyze_machine.py
windows_diagnostics_mcp/resources/: __init__.py  ai.py  developer.py  network.py  system.py
windows_diagnostics_mcp/services/: __init__.py  ai_service.py  developer_service.py  health_service.py  network_service.py  process_service.py  storage_service.py  subprocess_helper.py  system_service.py  utils.py  workload_service.py
windows_diagnostics_mcp/services/detectors/: __init__.py  cpu_detector.py  docker_detector.py  gpu_detector.py  lmstudio_detector.py  ollama_detector.py
windows_diagnostics_mcp/tests/: __init__.py  benchmark_tools.py  e2e_mcp_test.py  test_diagnostics.py  verify_prompts.py  verify_resources.py  verify_services.py  verify_tools.py
windows_diagnostics_mcp/tools/: __init__.py  ai.py  developer.py  health.py  network.py  process.py  storage.py  system.py  workload.py
